tests/typing/bad/testfile-typed-1.rs


fn main() {
    let x : i32 = 0;

    let y : u32 = 0;

    if x + y == 0 {
        0
    } else {
        3
    }
}